--- a/RABBITMQ-TUTORIAL/RABBITMQ-TUTORIAL.CONSUMER/RABBITMQ-TUTORIAL.CONSUMER.csproj
+++ b/RABBITMQ-TUTORIAL/RABBITMQ-TUTORIAL.CONSUMER/RABBITMQ-TUTORIAL.CONSUMER.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RABBITMQ-TUTORIAL\RABBITMQ-TUTORIAL.csproj" />
+  </ItemGroup>
+
 </Project>
